--- a/DockerFile
+++ b/DockerFile
@@ -1,15 +1,13 @@
-FROM ubuntu:latest
+# Use an official Python runtime as a parent image
+FROM python:3.10-slim
 
-RUN apt-get update && apt-get install -y \
-    python3.10 \
-    python3-pip \
-    git
+# Install git
+RUN apt-get update && apt-get install -y git
 
-RUN pip3 install PyYAML
+# Install PyYAML
+RUN pip install PyYAML
 
 COPY feed.py /usr/bin/feed.py
-
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
-
